fix(search): search result popup appear during page load

--- a/workspace/common/templates/base.html
+++ b/workspace/common/templates/base.html
@@ -23,6 +23,12 @@
   <!-- Theme Color -->
   <meta name="theme-color" content="#111827"/>
 
+  <style>
+    [x-cloak] {
+      display: none !important;
+    }
+  </style>
+
   {% block extra_head %}{% endblock %}
 </head>
 <body class="{% block body_class %}bg-base-100{% endblock %}">
