--- a/workspace/dashboard/templates/dashboard/index.html
+++ b/workspace/dashboard/templates/dashboard/index.html
@@ -96,7 +96,7 @@
               <i data-lucide="plus" class="w-5 h-5"></i>
               Create New Item
             </a>
-            <a href="#" class="btn btn-outline w-full justify-start gap-3">
+            <a href="/files" class="btn btn-outline w-full justify-start gap-3">
               <i data-lucide="folder" class="w-5 h-5"></i>
               Browse Files
             </a>
