--- a/workspace/files/ui/templates/files/ui/partials/folder_content.html
+++ b/workspace/files/ui/templates/files/ui/partials/folder_content.html
@@ -57,7 +57,7 @@
                 <a
                   href="/files/{{ node.uuid }}"
                   class="font-medium hover:text-primary hover:underline"
-                  x-target="folder-browser"
+                  x-target.push="folder-browser"
                 >
                   {{ node.name }}
                 </a>
