feat(navbar): improve navbar layout and styling

--- a/workspace/common/templates/ui/partials/user_avatar.html
+++ b/workspace/common/templates/ui/partials/user_avatar.html
@@ -8,32 +8,32 @@ Parameters:
 
 {% if size == 'xs' %}
   {% with size_class='w-6 h-6 text-xs' %}
-    <div class="avatar placeholder {% if show_ring %}ring ring-primary ring-offset-base-100 ring-offset-2{% endif %}">
-      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full">
+    <div class="avatar placeholder">
+      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full{% if show_ring %} ring-1 ring-primary/40 ring-offset-base-100 ring-offset-1{% endif %}">
         <span>{{ user.username|slice:":1"|upper }}</span>
       </div>
     </div>
   {% endwith %}
 {% elif size == 'sm' %}
   {% with size_class='w-8 h-8 text-xs' %}
-    <div class="avatar placeholder {% if show_ring %}ring ring-primary ring-offset-base-100 ring-offset-2{% endif %}">
-      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full">
+    <div class="avatar placeholder">
+      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full{% if show_ring %} ring-1 ring-primary/40 ring-offset-base-100 ring-offset-1{% endif %}">
         <span>{{ user.username|slice:":1"|upper }}</span>
       </div>
     </div>
   {% endwith %}
 {% elif size == 'lg' %}
   {% with size_class='w-16 h-16 text-xl' %}
-    <div class="avatar placeholder {% if show_ring %}ring ring-primary ring-offset-base-100 ring-offset-2{% endif %}">
-      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full">
+    <div class="avatar placeholder">
+      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full{% if show_ring %} ring-1 ring-primary/40 ring-offset-base-100 ring-offset-1{% endif %}">
         <span>{{ user.username|slice:":1"|upper }}</span>
       </div>
     </div>
   {% endwith %}
 {% else %}
   {% with size_class='w-10 h-10 text-sm' %}
-    <div class="avatar placeholder {% if show_ring %}ring ring-primary ring-offset-base-100 ring-offset-2{% endif %}">
-      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full">
+    <div class="avatar placeholder">
+      <div class="{{ size_class }} bg-neutral text-neutral-content rounded-full{% if show_ring %} ring-1 ring-primary/40 ring-offset-base-100 ring-offset-1{% endif %}">
         <span>{{ user.username|slice:":1"|upper }}</span>
       </div>
     </div>
