--- a/workspace/files/ui/templates/files/ui/index.html
+++ b/workspace/files/ui/templates/files/ui/index.html
@@ -3,6 +3,10 @@
 
 {% block title %}Files - Workspace{% endblock %}
 
+{% block navbar %}
+{% include 'ui/partials/navbar.html' with navbar_full_width=True %}
+{% endblock %}
+
 {% block drawer_class %}lg:drawer-open{% endblock %}
 {% block drawer_id %}files-drawer{% endblock %}
 
